sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: reassignment to val
swap=false
    ^AlgBubbleSort1:8: error: reassignment to val
		swap=true
                    ^